2001-11-20  Jason Rumney  <jasonr@gnu.org>

	* w32-fns.el (w32-system-coding-system): Initialize from
	locale-coding-system.

2001-11-20  Eli Zaretskii  <eliz@is.elta.co.il>

	* play/landmark.el: Mark lm-mode as special.  Suggested by Klaus
	Straubinger <ksnetz@arcor.de>.

	* play/gomoku.el: Mark gomoku-mode as special.  Suggested by Klaus
	Straubinger <ksnetz@arcor.de>.

2001-11-20  Stefan Monnier  <monnier@cs.yale.edu>

	* progmodes/cperl-mode.el (cperl-perldoc): Require man before binding
	`manual-program'.

2001-11-19  Stefan Monnier  <monnier@cs.yale.edu>

	* progmodes/cc-engine.el (c-parse-state): Typo. From Martin Stjernholm.

	* newcomment.el (comment-padding): Add :type and :group.

2001-11-18  Stefan Monnier  <monnier@cs.yale.edu>

	* newcomment.el (comment-indent):
	Fix misindentation for comment-only lines.

2001-11-16  Stefan Monnier  <monnier@cs.yale.edu>

	* rect.el (delete-rectangle-line): Fix pos/column confusion.

2001-11-15  Stefan Monnier  <monnier@cs.yale.edu>

	* menu-bar.el (menu-bar-edit-menu) <copy>: Put an explicit key binding.

2001-11-15  Andreas Schwab  <schwab@suse.de>

	* progmodes/ada-mode.el (ada-add-extensions): Quote regexp special
	characters and append anchor to pattern added to auto-mode-alist.

2001-11-15  Andre Spiegel  <spiegel@gnu.org>

	* vc.el: Documentation fixes.

2001-11-14  Stefan Monnier  <monnier@cs.yale.edu>

	* smerge-mode.el (smerge-match-conflict): Fix typo.
	(smerge-diff): Be careful to read match-data early enough.

2001-11-14  Andre Spiegel  <spiegel@gnu.org>

	* vc.el (vc-diff-internal, vc-coding-system-for-diff)
	(vc-default-diff-tree): New functions.
	(vc-version-diff): Use them.  As a result, coding systems are now
	set up properly for all sorts of diffs, and tree diffs can now
	also be done locally.
	(vc-diff): With a prefix argument, don't require that it's called
	from a buffer under version control.

	* vc-cvs.el (vc-cvs-diff-tree): New function.

2001-11-13  Stefan Monnier  <monnier@cs.yale.edu>
